--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    
+    <!-- USB permissions for disk image flashing -->
+    <uses-permission android:name="android.permission.USB_PERMISSION" />
+    <uses-feature android:name="android.hardware.usb.host" android:required="false" />
 
     <!-- Shizuku requires API 23. -->
     <uses-sdk tools:overrideLibrary="rikka.shizuku.aidl,rikka.shizuku.api,rikka.shizuku.shared" />
@@ -358,6 +362,12 @@
                 <data android:mimeType="image/*" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.dismal.files.diskimage.DiskImageFlashActivity"
+            android:exported="false"
+            android:label="Flash Disk Image"
+            android:theme="@style/Theme.MaterialFiles" />
 
         <service
             android:name="com.dismal.files.filejob.FileJobService"
